@@ -31,6 +31,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.stream.Stream;
 
 import static org.hamcrest.CoreMatchers.is;
@@ -49,8 +50,8 @@ class LoggerAdapterTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void testGetLogger(Class<? extends LoggerAdapter> loggerAdapterClass, Class<? extends Logger> loggerClass) throws IllegalAccessException, InstantiationException {
-        LoggerAdapter loggerAdapter = loggerAdapterClass.newInstance();
+    void testGetLogger(Class<? extends LoggerAdapter> loggerAdapterClass, Class<? extends Logger> loggerClass) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        LoggerAdapter loggerAdapter = loggerAdapterClass.getDeclaredConstructor().newInstance();
         Logger logger = loggerAdapter.getLogger(this.getClass());
         assertThat(logger.getClass().isAssignableFrom(loggerClass), is(true));
 
@@ -61,8 +62,8 @@ class LoggerAdapterTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void testLevel(Class<? extends LoggerAdapter> loggerAdapterClass) throws IllegalAccessException, InstantiationException {
-        LoggerAdapter loggerAdapter = loggerAdapterClass.newInstance();
+    void testLevel(Class<? extends LoggerAdapter> loggerAdapterClass) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        LoggerAdapter loggerAdapter = loggerAdapterClass.getDeclaredConstructor().newInstance();
         for (Level targetLevel : Level.values()) {
             loggerAdapter.setLevel(targetLevel);
             assertThat(loggerAdapter.getLevel(), is(targetLevel));
